--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,14 +1,15 @@
 server {
   listen 80 default;
-  root /home/boboism/projects/rails/toolman/public;
+  root /var/www/toolman/public;
 
   try_files $uri/index.html $uri @unicorn;
   location @unicorn {
-    proxy_pass http://localhost:3000;
+    proxy_pass http://unicorn;
   }
+
   error_page 500 502 503 504 /500.html;
 }
 
 upstream unicorn {
-  server unix:/tmp/unicorn.#{appname}.sock fail_timeout=0;
+  server unix:/tmp/unicorn.toolman.sock fail_timeout=0;
 }
